...
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_cinema"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/adapter_home_movie"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressDrawable="@color/white"
                android:indeterminateTint="@color/white"
                android:visibility="visible"
...
