<resources>
    <string name="label_app_tagline">W H A T S &#160;&#160;  N E W &#160;&#160;  M O V I E</string>
    <string name="label_menu_cinema">Cinema</string>
    <string name="label_menu_serial">Tv Show</string>
    <string name="label_production_companies">Production Companies</string>
    <string name="label_latest_eps">Latest Episode</string>
    <string name="label_eps"> Eps %1$s S %2$s </string>
    <string name="label_favorite_cinema">My Favorite</string>
    <string name="desc_empty_data_img">Image Empty Data</string>

</resources>