<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_cinema"
        android:title="@string/label_menu_cinema"
        app:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_favorite"
        android:title="@string/label_favorite_cinema"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_serial"
        android:icon="@drawable/ic_serial_tv"
        android:title="@string/label_menu_serial"
        app:showAsAction="ifRoom" />
</menu>