...
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/adapter_home_movie"
                tools:visibility="visible" />

...
